add routing and associated components.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,2 @@
-<div class="main-content">
 <app-navbar></app-navbar>
-<div class="container">
-<div style="text-align:center">
-  <h3 id="titleText"> FundL8er </h3>
-  <h5 id="titleCursiveText">Putting the Fun in Fundraising!</h5>
-</div>
-<img src="https://techcrunch.com/wp-content/uploads/2015/08/shutterstock_305221517.png?w=730&crop=1" alt="crowd-funding-photo" id="crowd-funding">
-</div>
-</div>
+<router-outlet></router-outlet>
