--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,11 @@
 h3 {
   font-weight: bold;
   font-family: 'Amatic SC', cursive;
-  font-size: 150px;
+  font-size: 10vw;
 }
 
 #titleCursiveText {
-  font-size: 70px;
+  font-size: 5vw;
   font-family: 'Amatic SC', cursive;
   font-weight: bold;
 
@@ -14,9 +14,13 @@ h3 {
 #crowd-funding{
   border: 5px solid white;
   box-shadow: #555 1px 1px 8px 1px;
-  margin-left: 95px;
-  margin-top: 50px;
-  width: 750px;
+  display: block;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  height: auto;
+  width: auto;
 }
 
 .main-content{
